# mw-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_jwt.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  verify_php_token.py
.github/workflows/: ci.yml
deploy/caddy/: Caddyfile.snippet
docs/: DEPLOYMENT.md  extension_integration.md
migrations/: env.py
migrations/versions/: .gitkeep  2026_03_04_0001_add_embedding_model_column.py  2026_04_29_0002_add_embedding_namespace_index.py  2026_04_29_0003_add_embedding_rev_id.py  2026_04_29_0004_add_embedding_content_sha1.py
scripts/: generate-secrets.sh  index_wiki.py
src/mw_mcp_server/: cli.py  config.py  main.py  prompts.py  tenants.py
src/mw_mcp_server/api/: action_routes.py  chat_routes.py  dependencies.py  embedding_routes.py  health_routes.py  models.py  search_routes.py  smw_routes.py  stats_routes.py
src/mw_mcp_server/auth/: jwt_utils.py  models.py  security.py
src/mw_mcp_server/core/: errors.py  middleware.py
src/mw_mcp_server/db/: __init__.py  cleanup.py  models.py  rate_limiter.py  session.py  vector_store.py
src/mw_mcp_server/embeddings/: embedder.py  index.py  models.py  queue.py  registry.py
src/mw_mcp_server/llm/: client.py
src/mw_mcp_server/sessions/: store.py
src/mw_mcp_server/tools/: base.py  definitions.py  edit_tools.py  pagination.py  schema_tools.py  search_tools.py  wiki_tools.py
src/mw_mcp_server/wiki/: api_client.py  smw_client.py
tests/: test_auth.py  test_chat_params.py  test_db.py  test_embedding_queue.py  test_embeddings_endpoints.py  test_health.py  test_model_validation.py  test_pagination.py  test_rate_limiter.py  test_schema_tools.py  test_smw_validation.py  test_stats.py  test_tool_dispatch.py
tests/scripts/: README.md  manual_test_connection.py  manual_test_embed.py  test_connection.py  test_embed.py  verify_schema_tools.py
