[project]
name = "mw-mcp-server"
version = "0.1.0"
description = "Production-grade MCP server for MediaWiki and LLM integration"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Daniel Aharoni", email = "user@example.com" }
]

license = { text = "MIT" }

########################################
# Core Runtime Dependencies
########################################
dependencies = [
  # Web framework
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",

  # Config & validation (Pydantic v2)
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",

  # HTTP client
  "httpx>=0.27.0,<1.0.0",

  # Auth / JWT
  "PyJWT>=2.8.0,<3.0.0",

  # Database (PostgreSQL + pgvector)
  "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "pgvector>=0.3.0,<1.0.0",
  "alembic>=1.13.0,<2.0.0",

  # Numerical
  "numpy>=1.26.0,<2.0.0",

  # Text Chunking
  "tiktoken>=0.7.0,<1.0.0",
  "langchain-text-splitters>=0.2.0,<1.0.0",
]

########################################
# Optional Dependency Groups
########################################

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "respx>=0.21.0,<1.0.0",         # HTTPX mocking
]

dev = [
  "ruff>=0.4.0,<1.0.0",
  "mypy>=1.9.0,<2.0.0",
  "ipython>=8.0.0,<9.0.0",
]

########################################
# Build System
########################################

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

########################################
# Tooling Configuration (Optional)
########################################

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
